loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:3: error: '(' expected but '{' found.
}else if{
        ^LoopCourse:8: error: illegal start of simple expression
	}
        ^