loopfor.LoopCourse.scala.code
if (!isFacingWall()){
  forward();
}else if{
  left();
  forward();
}